# MedRoute-AI

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  grader.py  models.py  tasks.py
server/: app.py
